refactoring and more CRUD ops

--- a/res/layout/activity_event_edit.xml
+++ b/res/layout/activity_event_edit.xml
@@ -57,6 +57,7 @@
         android:textStyle="bold"
         android:layout_gravity="center"
         android:textSize="20sp"
-        android:id="@+id/save_btn" />
+        android:id="@+id/save_btn"
+        android:onClick="saveEventAction" />
 
 </LinearLayout>
