--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:background="@null"
         android:textStyle="bold"
         android:onClick="weeklyAction"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:id="@+id/btn_open" />
 
     <LinearLayout
         android:layout_width="match_parent"
